INU-264-57-[added handlng of sticky headers in PTR control]

--- a/Example/iOSToolboxExample/iOSToolboxExample/Resources/Main.storyboard
+++ b/Example/iOSToolboxExample/iOSToolboxExample/Resources/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sRT-YD-wgX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sRT-YD-wgX">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -1410,6 +1410,91 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OtQ-gL-a6s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1697" y="10463"/>
+        </scene>
+        <!--Example Pull To Refresh Sticky Headers View Controller-->
+        <scene sceneID="P8O-fj-bAR">
+            <objects>
+                <viewController storyboardIdentifier="kExamplePullToRefreshStickyHeadersViewControllerID" id="1qC-p3-Wd4" customClass="ExamplePullToRefreshStickyHeadersViewController" customModule="iOSToolboxExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DBM-3P-Nsp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tUU-or-9pT">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gmA-z2-pU9">
+                                        <rect key="frame" x="5" y="543" width="365" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Tjc-WS-dls"/>
+                                        </constraints>
+                                        <state key="normal" title="Refresh"/>
+                                        <connections>
+                                            <action selector="manualRefreshButtonTapped" destination="1qC-p3-Wd4" eventType="touchUpInside" id="uAf-SK-OMi"/>
+                                        </connections>
+                                    </button>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tzY-6T-ndL">
+                                        <rect key="frame" x="5" y="5" width="365" height="528"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="kTableCellID" id="d7A-Ye-nFU" customClass="ExamplePullToRefreshLeftCell" customModule="iOSToolboxExample" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="28" width="365" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="d7A-Ye-nFU" id="jbG-ba-QM6">
+                                                    <rect key="frame" x="0.0" y="0.0" width="365" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Label Label Label Label Label Label Label LabelLabelLabel Label LabelLabel LabelLabel Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRx-Ls-Mn5">
+                                                            <rect key="frame" x="10" y="3" width="345" height="37.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="RRx-Ls-Mn5" secondAttribute="trailing" constant="10" id="AHL-Hm-dOV"/>
+                                                        <constraint firstItem="RRx-Ls-Mn5" firstAttribute="top" secondItem="jbG-ba-QM6" secondAttribute="top" constant="3" id="AgT-Yl-Cdh"/>
+                                                        <constraint firstAttribute="bottom" secondItem="RRx-Ls-Mn5" secondAttribute="bottom" constant="3" id="TqD-cN-FzG"/>
+                                                        <constraint firstItem="RRx-Ls-Mn5" firstAttribute="leading" secondItem="jbG-ba-QM6" secondAttribute="leading" constant="10" id="ve1-uN-rtp"/>
+                                                    </constraints>
+                                                </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="titleLabel" destination="RRx-Ls-Mn5" id="iv7-e9-bnm"/>
+                                                </connections>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="gmA-z2-pU9" secondAttribute="trailing" constant="5" id="Cva-lR-5Jq"/>
+                                    <constraint firstItem="tzY-6T-ndL" firstAttribute="top" secondItem="tUU-or-9pT" secondAttribute="top" constant="5" id="Ng5-IG-ADm"/>
+                                    <constraint firstItem="gmA-z2-pU9" firstAttribute="top" secondItem="tzY-6T-ndL" secondAttribute="bottom" constant="10" id="SOR-t5-UVG"/>
+                                    <constraint firstAttribute="bottom" secondItem="gmA-z2-pU9" secondAttribute="bottom" constant="10" id="SRA-67-cUd"/>
+                                    <constraint firstAttribute="trailing" secondItem="tzY-6T-ndL" secondAttribute="trailing" constant="5" id="YsB-Ok-iJc"/>
+                                    <constraint firstItem="tzY-6T-ndL" firstAttribute="leading" secondItem="tUU-or-9pT" secondAttribute="leading" constant="5" id="q0U-rt-PxY"/>
+                                    <constraint firstItem="gmA-z2-pU9" firstAttribute="leading" secondItem="tUU-or-9pT" secondAttribute="leading" constant="5" id="vL1-bg-36u"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="tUU-or-9pT" firstAttribute="leading" secondItem="8N2-Wz-HUj" secondAttribute="leading" id="451-w1-AKK"/>
+                            <constraint firstItem="8N2-Wz-HUj" firstAttribute="bottom" secondItem="tUU-or-9pT" secondAttribute="bottom" id="Hed-UM-av1"/>
+                            <constraint firstItem="tUU-or-9pT" firstAttribute="top" secondItem="8N2-Wz-HUj" secondAttribute="top" id="P0y-bJ-DYa"/>
+                            <constraint firstItem="8N2-Wz-HUj" firstAttribute="trailing" secondItem="tUU-or-9pT" secondAttribute="trailing" id="RIn-NI-LIh"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="8N2-Wz-HUj"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="containerView" destination="tUU-or-9pT" id="H48-R4-kt8"/>
+                        <outlet property="mainTableView" destination="tzY-6T-ndL" id="EZH-V6-kK1"/>
+                        <outlet property="manualRefeshButton" destination="gmA-z2-pU9" id="1Vw-5U-Nbv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CAq-si-H04" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2550" y="7549"/>
         </scene>
     </scenes>
     <resources>
