--- a/Example/iOSToolboxExample/iOSToolboxExample/Resources/Main.storyboard
+++ b/Example/iOSToolboxExample/iOSToolboxExample/Resources/Main.storyboard
@@ -1411,6 +1411,86 @@
             </objects>
             <point key="canvasLocation" x="1697" y="10463"/>
         </scene>
+        <!--Example Draggable Details Overlay View Controller-->
+        <scene sceneID="Vsd-71-Pnw">
+            <objects>
+                <viewController storyboardIdentifier="kExampleDraggableDetailsOverlayViewControllerID" id="lht-4A-vse" customClass="ExampleDraggableDetailsOverlayViewController" customModule="iOSToolboxExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tkN-ET-r55">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overlay has no shadow. Does not block interaction with main view. Has ? states. Can not be hidden by swipe." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OUR-qR-T78">
+                                <rect key="frame" x="16" y="80" width="343" height="81.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IcV-zU-sEA">
+                                <rect key="frame" x="16" y="177.5" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="j5D-Ij-rMy"/>
+                                </constraints>
+                                <state key="normal" title="sample action:"/>
+                                <connections>
+                                    <action selector="sampleActionButtonDidPress" destination="lht-4A-vse" eventType="touchUpInside" id="762-5G-m8P"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kxe-yU-EZl">
+                                <rect key="frame" x="16" y="223.5" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="Z85-dL-qIy"/>
+                                </constraints>
+                                <state key="normal" title="show overlay"/>
+                                <connections>
+                                    <action selector="showOverlayButtonDidPress" destination="lht-4A-vse" eventType="touchUpInside" id="hQM-iy-Nkm"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2u-u4-Oen">
+                                <rect key="frame" x="182" y="182" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Kxe-yU-EZl" firstAttribute="top" secondItem="IcV-zU-sEA" secondAttribute="bottom" constant="16" id="5W7-Ct-dvh"/>
+                            <constraint firstItem="IcV-zU-sEA" firstAttribute="top" secondItem="OUR-qR-T78" secondAttribute="bottom" constant="16" id="9zS-W5-Egn"/>
+                            <constraint firstItem="OUR-qR-T78" firstAttribute="top" secondItem="lAa-vV-iF9" secondAttribute="top" constant="16" id="Ciy-Wf-ovI"/>
+                            <constraint firstItem="Kxe-yU-EZl" firstAttribute="leading" secondItem="lAa-vV-iF9" secondAttribute="leading" constant="16" id="I7n-yf-4xB"/>
+                            <constraint firstItem="u2u-u4-Oen" firstAttribute="leading" secondItem="IcV-zU-sEA" secondAttribute="trailing" constant="16" id="YRF-vT-UmA"/>
+                            <constraint firstItem="u2u-u4-Oen" firstAttribute="centerY" secondItem="IcV-zU-sEA" secondAttribute="centerY" id="ZRl-jH-QvK"/>
+                            <constraint firstItem="IcV-zU-sEA" firstAttribute="leading" secondItem="lAa-vV-iF9" secondAttribute="leading" constant="16" id="kqs-gD-eQD"/>
+                            <constraint firstItem="lAa-vV-iF9" firstAttribute="trailing" secondItem="OUR-qR-T78" secondAttribute="trailing" constant="16" id="vax-jd-PAl"/>
+                            <constraint firstItem="OUR-qR-T78" firstAttribute="leading" secondItem="lAa-vV-iF9" secondAttribute="leading" constant="16" id="x1w-8a-EcH"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="lAa-vV-iF9"/>
+                    </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="sampleActionCountLabel" destination="u2u-u4-Oen" id="4dn-GX-nUU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="unf-ur-rQy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1697" y="11166"/>
+        </scene>
+        <!--Example Draggable Details Content View Controller-->
+        <scene sceneID="fAb-sN-lmr">
+            <objects>
+                <viewController storyboardIdentifier="kExampleDraggableDetailsContentViewControllerID" id="dAE-qs-dTN" customClass="ExampleDraggableDetailsContentViewController" customModule="iOSToolboxExample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1uK-2w-lE9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.59999999999999998" green="0.20000000000000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <viewLayoutGuide key="safeArea" id="2Hj-AF-JQq"/>
+                    </view>
+                    <nil key="simulatedTopBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8GK-vP-zdZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2550" y="11166"/>
+        </scene>
         <!--Example Pull To Refresh Sticky Headers View Controller-->
         <scene sceneID="P8O-fj-bAR">
             <objects>
