--- a/Example/iOSToolboxExample/iOSToolboxExample/Resources/Main.storyboard
+++ b/Example/iOSToolboxExample/iOSToolboxExample/Resources/Main.storyboard
@@ -1419,61 +1419,116 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overlay has no shadow. Does not block interaction with main view. Has ? states. Can not be hidden by swipe." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OUR-qR-T78">
-                                <rect key="frame" x="16" y="80" width="343" height="81.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IcV-zU-sEA">
-                                <rect key="frame" x="16" y="177.5" width="150" height="30"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oCL-jf-mY5">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1QV-ga-W7o" userLabel="View - scrollable content">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IcV-zU-sEA">
+                                                <rect key="frame" x="0.0" y="16" width="150" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="150" id="j5D-Ij-rMy"/>
+                                                    <constraint firstAttribute="height" constant="40" id="u7a-b0-erZ"/>
+                                                </constraints>
+                                                <state key="normal" title="sample action:"/>
+                                                <connections>
+                                                    <action selector="sampleActionButtonDidPress" destination="lht-4A-vse" eventType="touchUpInside" id="762-5G-m8P"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2u-u4-Oen">
+                                                <rect key="frame" x="166" y="25.5" width="42" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="top inset:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9LD-Ga-OHe">
+                                                <rect key="frame" x="16" y="76.5" width="71.5" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="9xM-hw-sUi">
+                                                <rect key="frame" x="103.5" y="72" width="100" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="100" id="otY-wu-u2N"/>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="max height:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Tf-CV-jYR">
+                                                <rect key="frame" x="16" y="122.5" width="89.5" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="W0W-1E-0zb">
+                                                <rect key="frame" x="121.5" y="118" width="100" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="100" id="ld1-8x-Of6"/>
+                                                </constraints>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="W0W-1E-0zb" firstAttribute="top" secondItem="9xM-hw-sUi" secondAttribute="bottom" constant="16" id="1vm-5e-5kZ"/>
+                                            <constraint firstItem="IcV-zU-sEA" firstAttribute="leading" secondItem="1QV-ga-W7o" secondAttribute="leading" id="22o-B8-nFy"/>
+                                            <constraint firstItem="9xM-hw-sUi" firstAttribute="top" secondItem="IcV-zU-sEA" secondAttribute="bottom" constant="16" id="47F-kn-2Ly"/>
+                                            <constraint firstItem="W0W-1E-0zb" firstAttribute="centerY" secondItem="0Tf-CV-jYR" secondAttribute="centerY" id="4Et-il-Gkh"/>
+                                            <constraint firstItem="9xM-hw-sUi" firstAttribute="leading" secondItem="9LD-Ga-OHe" secondAttribute="trailing" constant="16" id="9l4-JW-Qla"/>
+                                            <constraint firstItem="0Tf-CV-jYR" firstAttribute="leading" secondItem="1QV-ga-W7o" secondAttribute="leading" constant="16" id="O8u-MI-Z9d"/>
+                                            <constraint firstItem="9LD-Ga-OHe" firstAttribute="leading" secondItem="1QV-ga-W7o" secondAttribute="leading" constant="16" id="QB1-6f-eLv"/>
+                                            <constraint firstItem="u2u-u4-Oen" firstAttribute="centerY" secondItem="IcV-zU-sEA" secondAttribute="centerY" id="Tyx-9y-rIX"/>
+                                            <constraint firstItem="W0W-1E-0zb" firstAttribute="leading" secondItem="0Tf-CV-jYR" secondAttribute="trailing" constant="16" id="W1V-9C-mrM"/>
+                                            <constraint firstItem="u2u-u4-Oen" firstAttribute="leading" secondItem="IcV-zU-sEA" secondAttribute="trailing" constant="16" id="Wgp-qb-iEA"/>
+                                            <constraint firstItem="9xM-hw-sUi" firstAttribute="centerY" secondItem="9LD-Ga-OHe" secondAttribute="centerY" id="XdA-zm-eyV"/>
+                                            <constraint firstItem="IcV-zU-sEA" firstAttribute="top" secondItem="1QV-ga-W7o" secondAttribute="top" constant="16" id="YKP-S3-M0j"/>
+                                            <constraint firstAttribute="height" constant="1000" id="b8h-HT-jYg"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="j5D-Ij-rMy"/>
+                                    <constraint firstAttribute="bottom" secondItem="1QV-ga-W7o" secondAttribute="bottom" id="0lr-27-VF4"/>
+                                    <constraint firstItem="1QV-ga-W7o" firstAttribute="top" secondItem="oCL-jf-mY5" secondAttribute="top" id="289-my-q7E"/>
+                                    <constraint firstItem="1QV-ga-W7o" firstAttribute="width" secondItem="oCL-jf-mY5" secondAttribute="width" id="WlP-vt-99V"/>
+                                    <constraint firstAttribute="trailing" secondItem="1QV-ga-W7o" secondAttribute="trailing" id="esk-RV-713"/>
+                                    <constraint firstItem="1QV-ga-W7o" firstAttribute="leading" secondItem="oCL-jf-mY5" secondAttribute="leading" id="ltV-si-9wJ"/>
                                 </constraints>
-                                <state key="normal" title="sample action:"/>
-                                <connections>
-                                    <action selector="sampleActionButtonDidPress" destination="lht-4A-vse" eventType="touchUpInside" id="762-5G-m8P"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kxe-yU-EZl">
-                                <rect key="frame" x="16" y="223.5" width="150" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="Z85-dL-qIy"/>
-                                </constraints>
-                                <state key="normal" title="show overlay"/>
-                                <connections>
-                                    <action selector="showOverlayButtonDidPress" destination="lht-4A-vse" eventType="touchUpInside" id="hQM-iy-Nkm"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2u-u4-Oen">
-                                <rect key="frame" x="182" y="182" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </scrollView>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Kxe-yU-EZl" firstAttribute="top" secondItem="IcV-zU-sEA" secondAttribute="bottom" constant="16" id="5W7-Ct-dvh"/>
-                            <constraint firstItem="IcV-zU-sEA" firstAttribute="top" secondItem="OUR-qR-T78" secondAttribute="bottom" constant="16" id="9zS-W5-Egn"/>
-                            <constraint firstItem="OUR-qR-T78" firstAttribute="top" secondItem="lAa-vV-iF9" secondAttribute="top" constant="16" id="Ciy-Wf-ovI"/>
-                            <constraint firstItem="Kxe-yU-EZl" firstAttribute="leading" secondItem="lAa-vV-iF9" secondAttribute="leading" constant="16" id="I7n-yf-4xB"/>
-                            <constraint firstItem="u2u-u4-Oen" firstAttribute="leading" secondItem="IcV-zU-sEA" secondAttribute="trailing" constant="16" id="YRF-vT-UmA"/>
-                            <constraint firstItem="u2u-u4-Oen" firstAttribute="centerY" secondItem="IcV-zU-sEA" secondAttribute="centerY" id="ZRl-jH-QvK"/>
-                            <constraint firstItem="IcV-zU-sEA" firstAttribute="leading" secondItem="lAa-vV-iF9" secondAttribute="leading" constant="16" id="kqs-gD-eQD"/>
-                            <constraint firstItem="lAa-vV-iF9" firstAttribute="trailing" secondItem="OUR-qR-T78" secondAttribute="trailing" constant="16" id="vax-jd-PAl"/>
-                            <constraint firstItem="OUR-qR-T78" firstAttribute="leading" secondItem="lAa-vV-iF9" secondAttribute="leading" constant="16" id="x1w-8a-EcH"/>
+                            <constraint firstItem="lAa-vV-iF9" firstAttribute="bottom" secondItem="oCL-jf-mY5" secondAttribute="bottom" id="45p-P5-5jL"/>
+                            <constraint firstItem="oCL-jf-mY5" firstAttribute="top" secondItem="lAa-vV-iF9" secondAttribute="top" id="ftL-Si-eRb"/>
+                            <constraint firstItem="oCL-jf-mY5" firstAttribute="leading" secondItem="tkN-ET-r55" secondAttribute="leading" id="pJg-HP-qnU"/>
+                            <constraint firstItem="lAa-vV-iF9" firstAttribute="trailing" secondItem="oCL-jf-mY5" secondAttribute="trailing" id="rdk-wm-ZBv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lAa-vV-iF9"/>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="wKi-Vj-hqy">
+                        <barButtonItem key="rightBarButtonItem" title="show" id="Uj3-EK-gQh">
+                            <connections>
+                                <action selector="showOverlayButtonDidPress" destination="lht-4A-vse" id="LFK-Y3-CTs"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="contentScrollView" destination="oCL-jf-mY5" id="EES-YL-0Fs"/>
+                        <outlet property="maxHeightTextField" destination="W0W-1E-0zb" id="ZiQ-Xy-Jee"/>
                         <outlet property="sampleActionCountLabel" destination="u2u-u4-Oen" id="4dn-GX-nUU"/>
+                        <outlet property="topInsetTextField" destination="9xM-hw-sUi" id="F69-hg-w7y"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="unf-ur-rQy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1697" y="11166"/>
+            <point key="canvasLocation" x="1696.8" y="11164.767616191904"/>
         </scene>
         <!--Example Draggable Details Content View Controller-->
         <scene sceneID="fAb-sN-lmr">
